add_subdirectory(AI)

find_package (KdepimLibs 4.5.60)
macro_optional_find_package(QAccessibilityClient)
macro_log_feature(QAccessibilityClient_FOUND "qaccessibilityclient" "KDE client-side accessibility library" "https://projects.kde.org/projects/playground/accessibility/libkdeaccessibilityclient" FALSE "" "Required to enable ATSPI plugin.")


if (KDEPIMLIBS_FOUND)
add_subdirectory(Akonadi)
endif (KDEPIMLIBS_FOUND)

if(QAccessibilityClient_FOUND)
  add_subdirectory(ATSPI)
endif(QAccessibilityClient_FOUND)

add_subdirectory(Calculator)
add_subdirectory(Composite)
add_subdirectory(DBus)
add_subdirectory(DesktopGrid)
add_subdirectory(Dialog)
add_subdirectory(Dictation)
add_subdirectory(Executable)
add_subdirectory(Filter)
add_subdirectory(InputNumber)
add_subdirectory(Json)
add_subdirectory(List)
add_subdirectory(Keyboard)
add_subdirectory(Place)
add_subdirectory(PronunciationTraining)
add_subdirectory(Shortcut)
add_subdirectory(TextMacro)
